tests/invalid_inputs/sema/void_ptr_postdecr.cpp
// test that post decrement doesn't work with void pointers

void f() {
	void *p;
	p--;
}
